src/main/resources/Krakatau-master/tests/assembler/bad/bscpmixup3.j
.class public whocares
.super java/lang/Object

.bootstrap [bs:0] = Int 3
.end class
